# rust-supabase-cli

./: .env.example  Cargo.toml  LICENSE  README.md
src/: main.rs  modules.rs
