[package]
name = "rust_supabase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
dirs = "4.0.0"
tokio = { version = "1.22.0", features = ["full"] }
postgrest = "1.0"
dotenv = "0.15.0"
serde = "1.0.147"
serde_json = "1.0.89"
clap = { version = "4.0.26", features = ["derive"] }
